# kinect2_ros2

kinect2_bridge/: CMakeLists.txt  package.xml
kinect2_bridge/config/: camera_config.yaml  dual_kinect_serials.yaml  multi_camera_config.yaml
kinect2_bridge/launch/: dual_kinect2.launch.py  dual_kinect2_simple.launch.py  kinect2_bridge_launch.yaml  kinect2_dual_dynamic.launch.py  kinect2_rviz.rviz  kinect2_single.launch.py  kinect_viz.launch.py  kinect_viz.rviz  launch_kinect.sh  multi_kinect.launch.py
kinect2_bridge/scripts/: dynamic_camera_tf.py
kinect2_bridge/src/: kinect2_bridge.cpp
kinect2_bridge/urdf/: kinect2_sensor.urdf.xacro
kinect2_calibration/src/: kinect2_calibration.cpp
